--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="ja">
 <head>
 <meta charset="uft-8">
-<meta http-equiv="refresh" content="URL=https://code-raisan.github.io/B1u3-Syntax/">
 </head>
+  <body>
+    <script>
+      window.location = "https://code-raisan.github.io/B1u3-Syntax/";
+    </script>
+  </body>
 </html>
